# leagueOfLegendsChatbot

./: LICENSE  README.md
Backend/: Untitled-1.ipynb
Backend/lol-chatter-backend/: .gitignore  README.md  champions.pkl  patches.pkl  pyproject.toml  testing.ipynb
Backend/lol-chatter-backend/lol_chatter_backend/: config.py  main.py
Backend/lol-chatter-backend/lol_chatter_backend/DTOs/: __init__.py  error_DTO.py  message_DTO.py  session_DTO.py  token_DTO.py  user_data_DTO.py  user_login_DTO.py  user_signup_DTO.py
Backend/lol-chatter-backend/lol_chatter_backend/DbInitialization/: __init__.py  db.py
Backend/lol-chatter-backend/lol_chatter_backend/DbOperations/: ChatManagement.py  UserManagement.py
Backend/lol-chatter-backend/lol_chatter_backend/Dependencies/: db_deps.py  token_deps.py
Backend/lol-chatter-backend/lol_chatter_backend/LolDataFetcher/: __init__.py  fetcher.py  post_processor.py
Backend/lol-chatter-backend/lol_chatter_backend/LolGeminiClient/: chat_manager.py  config.py  functions.py  model_generation.py  prompts.py  retriever.py  summarizer.py
Backend/lol-chatter-backend/lol_chatter_backend/Models/: User.py  chat.py  token_data.py
Backend/lol-chatter-backend/lol_chatter_backend/Security/: hashing.py  tokens.py
Backend/lol-chatter-backend/lol_chatter_backend/auth/: auth.py
Backend/lol-chatter-backend/lol_chatter_backend/cached/: items.pkl
Backend/lol-chatter-backend/lol_chatter_backend/routes/: chatting.py
Backend/lol-chatter-backend/tests/: test_fetchers.py
Frontend/LolChatterFrontend/: README.md  index.html  package-lock.json  (+1 more)
(+22 files in other folders)
