[tool.poetry]
name = "lol-chatter-backend"
version = "0.1.0"
description = ""
authors = ["EzzatEsam <ezzatesam1214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
websockets = "^12.0"
pytest = "^8.2.2"
langchain-google-genai = "^1.0.8"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-chroma = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
